# ng_2501

./: .dockerignore  ARCHITECTURE.md  DEVELOP.md  Dockerfile  README.md  docker-compose.yml  init-letsencrypt.sh  tech.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/ISSUE_TEMPLATE/: issue-template.md  issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yml
back/: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
back/app/: main.py
back/app/fast_ai_agent/: __init__.py  animate_math_gemini.py  diff_utils.py  gemini_client.py  manim_runner.py  pipeline.py  prompts.py  prompts.toml  sanitizers.py  service.py  templates.py
back/app/fast_ai_agent/manim_template_code/: differentiation.py  function.py  function2.py  integral.py  layout_helpers.py  movingP.py  sincos1.py  sincos2.py  vector.py
back/app/model/: sample_model.py
back/app/router/: animation.py  sample_router.py
back/app/service/: agent.py  agents.py  ai_agent_service.py  graph_agent.py  prompts.toml  rag_agent.py  react_agent.py  regacy_agent.py  regacy_prompt.toml  sample_service.py
back/app/service/regacy_agents/: agent.py  react_agent.py  regacy_agent.py
back/app/tools/: lint.py  secure.py
back/app/tools/embeding_data/: manim_rag.py
back/app/tools/video_data/: video_db.py  video_db_test.py
front/: .gitignore  README.md  biome.json  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
front/src/app/: globals.css  layout.tsx  page.tsx
nginx/: app.conf.template  nginx.conf
(+32 files in other folders)
