[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.118.2",
    "json-repair>=0.52.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langdetect>=1.0.9",
    "langgraph>=0.6.8",
    "langserve>=0.3.2",
    "manim==0.18.1",
    "markdown-it-py>=4.0.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pyright>=1.1.406",
    "ruff>=0.14.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
